# vatel-py-sdk

./: .gitignore  README.md  openapi.json  pyproject.toml
examples/: README.md  run_session.py
src/vatel/: __init__.py  client.py  connection.py
src/vatel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vatel/api/: __init__.py  agents.py  base.py  calls.py  llms.py  organization.py  session.py  sip_trunks.py  twilio_numbers.py  voices.py
src/vatel/models/: __init__.py  rest.py  ws.py
