[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vatel"
version = "0.1.0"
description = "Python SDK for Call Agent Builder REST and WebSocket APIs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = []
keywords = ["vatel", "call-agent", "websocket", "voice"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0",
  "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
